--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <title>Halaman Index</title>
+  <title>Welcome to Website Trial</title>
 </head>
 <body>
   <center>
-    <h1>Heading H1</h1>
+    <h1>Hai !, Nama Saya Luqman Hakim Nadzari</h1>
   </center>
 </body>
 </html>
