--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <center>
-    <h1>Hai !, Nama Saya Luqman Hakim Nadzari</h1>
+    <h1>Hai !! Nama Saya Luqman Hakim Nadzari</h1>
   </center>
 </body>
 </html>
