--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-  <title>Welcome to Website Trial</title>
+  <title>Luqman Hakim Nadzari | Salam Programmer !</title>
 </head>
 <body>
   <center>
     <h1>Hai !! Nama Saya Luqman Hakim Nadzari</h1>
+    <h2>Universitas Mercu Buana Jakarta</h2>
   </center>
 </body>
 </html>
