--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <center>
     <h1>Hai !! Nama Saya Luqman Hakim Nadzari</h1>
-    <h2>Universitas Mercu Buana Jakarta</h2>
+    <h2>Universitas Mercu Buana Jakartaa</h2>
   </center>
 </body>
 </html>
