--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Luqman Hakim Nadzari | Salam Programmer !</title>
+  <meta charset="UTF-8">
+  <title> Luqman Hakim Nadzari || Salam! </title>
+  <meta name="description" content="Hi! i am Luqman Hakim Nadzari, i run Sysorange. I write things on my blog in Bahasa.">
+  <meta name="keywords" content="luqman hakim,nadzari, website">
+  <meta name="author" content="Luqman Hakim Nadzari">
+  <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body{
+      margin: 10% 20% 0 20%;
+      font-family: 'Oxygen', sans-serif;
+    }
+    h1{ color:rgb(66, 63, 64); }
+    a{ color:black; color:rgb(66, 63, 64); }
+    p{ font-size: 22px; }
+    #pr_list p{ margin: 0px; }
+    @media only screen and (max-width: 500px) {
+      body{ font-size: 80%; margin: 10%; }
+      h1 { font-size: 22px; }
+      p{ font-size: 18px; }
+    }
+  </style>
 </head>
 <body>
-  <center>
-    <h1>Hai !! Nama Saya Luqman Hakim Nadzari</h1>
-    <h2>Universitas Mercu Buana Jakartaa</h2>
-    <h3>Angkatan 2010</h3>
-  </center>
+
+  <h1>Hi! i am  <a target="_blank" href='http://twitter.com/hilmanrdn'>Luqman Hakim Nadzari ✌</a>, <br> i run <a target="_blank" href='http://sysorange.com'>Sysorange</a>.
+  </h1>
+
+  <br>
+
 </body>
 </html>
