--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-  <h1>Hi! i am  <a target="_blank" href='http://twitter.com/nadzari'>Luqman Hakim Nadzari</a>, <br> i run <a target="_blank" href='http://sysorange.com'>Sysorange</a>.
+  <h1>Hi! i am  <a target="_blank" href='http://twitter.com/nadzari'>Luqman Hakim Nadzari</a>, <br> i run <a target="_blank" href='http://sysorange.com'>Sysorange Developer</a>.
   </h1>
 
   <br>
