--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SysOrange Digital Solution</title>
+    <title>Luqman Hakim Nadzari</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">SysOrange</a>
+                <a class="navbar-brand" href="#page-top">luqman92.github.io</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,9 +62,6 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
-					<li class="page-scroll">
-                        <a href="http://www.sysorange.com/blog" target="_blank">Blog</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -77,11 +74,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/luqman.jpg" alt=""><!-- profile.png -->
                     <div class="intro-text">
-                        <span class="name">SysOrange</span>
+                        <span class="name">Luqman Hakim Nadzari</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Programmer Web Base - PHP - Javascript - aJax - jQuery - Framework Codeigniter - Framework Laravel - Wordpress Developer</span>
                     </div>
                 </div>
             </div>
@@ -249,19 +246,19 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Jl. Wana Mulya No 104<br>Jakarta Barat, DKI Jakarta</p>
+                        <p>Jl. Saguling 1 No 13 Perumnas 2 <br>JTangerang, Kota Tangerang</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the SysOrange</h3>
+                        <h3>Around the Luqman Hakim Nadzari</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/luqmanhakim.nadzari" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/nadzari" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -272,7 +269,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About SysOrange</h3>
+                        <h3>About Luqman Hakim Nadzari</h3>
                         <!--<p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>-->
                     </div>
                 </div>
@@ -282,7 +279,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; www.sysorange.com 2016
+                        Copyright &copy; www.luqman92.github.io 2016
                     </div>
                 </div>
             </div>
