--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/luqman.jpg" alt=""><!-- profile.png -->
+                    <img class="img-responsive" src="img/luqman.png" alt=""><!-- profile.png -->
                     <div class="intro-text">
                         <span class="name">Luqman Hakim Nadzari</span>
                         <hr class="star-light">
