--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Luqman Hakim Nadzari</title>
-
+    <link href="img/portfolio/lhn.png" type="image/png" rel="shortcut icon">
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
