--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Jl. Saguling 1 No 13 Perumnas 2 <br>JTangerang, Kota Tangerang</p>
+                        <p>Jl. Saguling 1 No 13 Perumnas 2 <br>Tangerang, Kota Tangerang</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Luqman Hakim Nadzari</h3>
