--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="intro-text">
                         <span class="name">Luqman Hakim Nadzari</span>
                         <hr class="star-light">
-                        <span class="skills">Programmer Web Base - PHP - Javascript - aJax - jQuery - Framework Codeigniter - Framework Laravel - Wordpress Developer</span>
+                        <span class="skills">Programmer Web Base - PHP - OOP PHP - Javascript - aJax - jQuery - Framework Codeigniter - Framework Laravel - Wordpress Developer</span>
                     </div>
                 </div>
             </div>
