--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hai, Perkenalkan nama saya Luqman Hakim Nadzari. Saya kuliah di Universitas Swasta di Jakarta Barat. Saat ini saya sedang melaksanakan Tugas Akhir Sebagai syarat kelulusan yang Insya Allah lulus di tahun 2016 ini. Selama saya kuliah, saya giat dengan pekerjaan sampingan yaitu Freelance Programmer hingga saat ini. Saya pernah bekerja di PT. Sisfomedika sebagai Freelance Programmer dan Implementasi Sistem Rumah Sakit yang berada di daerah jakarta Pusat. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Saya Tinggal Di daerah Tangerang tepatnya Tangerang karawaci. Setiap harinya saya bekerja sekaligus mempelajari hal baru yang jadi passion saya, yaitu komputer.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> CV Saya Klik di sini!!
                     </a>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate action="proses.php" method="post">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
