--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate action="proses.php" method="post">
+                    <form name="sentMessage" id="contactForm" novalidate action="mail/contact_me.php" method="post">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
@@ -249,28 +249,24 @@
                         <p>Jl. Saguling 1 No 13 Perumnas 2 <br>Tangerang, Kota Tangerang</p>
                     </div>
                     <div class="footer-col col-md-4">
+                        
+                    </div>
+                    <div class="footer-col col-md-4">
                         <h3>Around the Luqman Hakim Nadzari</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.facebook.com/luqmanhakim.nadzari" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://plus.google.com/117095030834472156456" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/nadzari" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://www.linkedin.com/in/luqman-hakim-nadzari-245487b3?trk=nav_responsive_tab_profile_pic" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin" target="_blank"></i></a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Luqman Hakim Nadzari</h3>
-                        <!--<p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>-->
                     </div>
                 </div>
             </div>
